--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
     "@types/node": "20.8.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
+    "axios": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.52.0",
     "eslint-config-next": "14.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.0.0",
+    "nodemailer": "^6.9.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
